# fastmcp_local_client

./: README.md  client1.py  pyproject.toml
